# serverless-samples

./: .gitignore  README.md
apigw-ai-agents/: README.md  Security Scanning.docx  data-sources.md
apigw-ai-agents/bedrock-agents/mcp/api-helper/: pyproject.toml
apigw-ai-agents/strands-agentcore/mcp/api-helper/: README.md  api_helper.py  pyproject.toml  requirements.txt
apigw-eventbridge-schema-validation/: README.md  template.yaml
apigw-header-routing/: README.md  template-header-based-routing.yaml  template-path-based-routing.yaml
apigw-lambda-powertools-openapi-cdk/: README.md  package-lock.json  package.json
apigw-log-analytic/: README.md  data-set.json  template.yaml
apigw-private-custom-domain-name/: .gitignore  README.md  makefile
apigw-readme-integration/: README.md  requirements.txt  template.yaml
apigw-response-streaming/: README.md
apigw-vtl-editor/: README.md  build-and-run.sh  package-lock.json  start-local-api.sh  start.sh  template.yaml
apigw-ws-integrations/: README.md  template.yaml
claude-hub/: README.md
das-lambda-java-sam/: .ash.yaml  BootStrapFromCloudShell.sh  BootStrapFromCloudShellNoConsoleAccess.sh  GetAWSCLIProfileDetailsFromCloudshell.sh  README.md  RestartOSIPipeline.sh  RunCloudformationStack.sh  UpdateOSIRole.sh  cleanup-script.sh  example-pattern.json  setup-das-cfn.yaml
fargate-private-api/: README.md
fargate-rest-api/: README.md
javascript-http-sam/: buildspec.yml  package-lock.json  package.json  pipeline.yaml  template.yaml
lambda-ecs-dual-deploy/: README.md
lambda-function-url/: README.md  template.yaml
(+750 files in other folders)
