[project]
name = "api-helper"
version = "0.1.0"
description = "API development, operations, management, and governance expert"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.37.26",
    "mcp>=1.6.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
api-helper = "api-helper:main"