[project]
name = "api-helper"
version = "0.1.0"
description = "API Helper MCP server for Kiro - provides expert guidance for API development on AWS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.35.0",
    "botocore>=1.35.0",
    "mcp>=1.0.0",
]

[project.scripts]
api-helper = "api_helper:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
